src/test/deca/syntax/parser/invalid/decl_var_in_while.deca
// Test parser, pas le droit de déclarer une variable après
// la liste de déclaration, ici dans un while

{

    while (x || y ){
        int z = 5;
    }
}